Add lodash and react-router-dom dependencies

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.8",
     "flowbite": "^2.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.302.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
