--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite  --host 0.0.0.0 --port 5173",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@baskvava/react-video-modal": "^0.1.0-alpha",
     "@material-tailwind/react": "^2.1.8",
     "flowbite": "^2.2.1",
     "lodash": "^4.17.21",
@@ -18,7 +19,8 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-router-loading": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
